package de.weinbrecht.luc.architecture.ddd.demo.domain.events.type;

/**
 * Ereignisse die ein fahcliches Event / Veränderung repräsentieren
 */
public interface DomainEvent {
}
