@startuml

class de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.Bestellnummer {
}


class de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.Bestellung {
	{field} -abholortSupplier : java.util.function.Function
	{field} -adresseSupplier : java.util.function.Function
	{field} -cachedAdresse : java.util.concurrent.atomic.AtomicReference
	{method} +getAdresse () : de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.Adresse
	{method} +getAdresse ( forceUpdate : boolean ) : de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.Adresse
	{method} -loadAdresse () : de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.Adresse
	{method} #validate () : void
	{method}  {static} +validate ( bestellnummer : de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.Bestellnummer , bestellungsaufgabeEvent : de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.erzeugung.BestellungsaufgabeEvent ) : void
}


class de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.Kundennummer {
}


class de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.AbholortReferenz {
}


class de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.Adresse {
	{method} #validate () : void
}


class de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.Hausnummer {
}


class de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.Ort {
}


class de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.Postleitzahl {
}


class de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.Strasse {
}


abstract class de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.BestellungEvent {
	{method} #validate () : void
}


class de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.abfrage.BestellungsabfrageEvent {
}


abstract class de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.erzeugung.BestellungsaufgabeEvent {
	{method} +isBestellungsspezifischeAdresse () : boolean
}


class de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.erzeugung.BestellungsaufgabeEventMitAbholort {
}


class de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.erzeugung.BestellungsaufgabeEventMitAdresse {
}


interface de.weinbrecht.luc.architecture.ddd.demo.domain.events.type.DomainEvent {
}


class de.weinbrecht.luc.architecture.ddd.demo.domain.events.usecase.exception.AdresseNotFoundException {
}


class de.weinbrecht.luc.architecture.ddd.demo.domain.events.usecase.exception.BestellungException {
}


class de.weinbrecht.luc.architecture.ddd.demo.domain.events.usecase.exception.BestellungNotFoundException {
}


interface de.weinbrecht.luc.architecture.ddd.demo.domain.events.usecase.in.Bestellungsabfrage {
	{method}  {abstract} +query ( bestellnummer : de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.Bestellnummer ) : de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.Bestellung
}


interface de.weinbrecht.luc.architecture.ddd.demo.domain.events.usecase.in.Bestellungserzeugung {
	{method}  {abstract} +create ( bestellungsaufgabeEventMitAbholort : de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.erzeugung.BestellungsaufgabeEventMitAbholort ) : de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.Bestellnummer
	{method}  {abstract} +create ( bestellungsaufgabeMitAdresseEvent : de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.erzeugung.BestellungsaufgabeEventMitAdresse ) : de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.Bestellnummer
}


interface de.weinbrecht.luc.architecture.ddd.demo.domain.events.usecase.out.AbholortQuery {
	{method}  {abstract} +find ( abholortReferenz : de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.AbholortReferenz ) : de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.Adresse
}


interface de.weinbrecht.luc.architecture.ddd.demo.domain.events.usecase.out.AdressRepository {
	{method}  {abstract} +find ( bestellnummer : de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.Bestellnummer ) : de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.Adresse
}


interface de.weinbrecht.luc.architecture.ddd.demo.domain.events.usecase.out.BestellungRepository {
	{method}  {abstract} +find ( bestellnummer : de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.Bestellnummer ) : de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.abfrage.BestellungsabfrageEvent
	{method}  {abstract} +insert ( bestellnummer : de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.Bestellnummer , bestellungsaufgabeEvent : de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.erzeugung.BestellungsaufgabeEvent ) : void
}




de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.Bestellung *--  de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.Bestellnummer : bestellnummer
de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.Bestellung *--  de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.Kundennummer : kundennummer
de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.Bestellung *--  de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.AbholortReferenz : abholortReferenz
de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.Adresse *--  de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.Hausnummer : hausnummer
de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.Adresse *--  de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.Ort : ort
de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.Adresse *--  de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.Postleitzahl : postleitzahl
de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.Adresse *--  de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.Strasse : strasse
de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.BestellungEvent *--  de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.Kundennummer : kundennummer
de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.BestellungEvent *--  de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.AbholortReferenz : abholortReferenz
de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.BestellungEvent *--  de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.adresse.Adresse : adresse
de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.BestellungEvent ..|>  de.weinbrecht.luc.architecture.ddd.demo.domain.events.type.DomainEvent
de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.abfrage.BestellungsabfrageEvent *--  de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.Bestellnummer : bestellnummer
de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.abfrage.BestellungsabfrageEvent --|>  de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.BestellungEvent
de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.erzeugung.BestellungsaufgabeEvent --|>  de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.BestellungEvent
de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.erzeugung.BestellungsaufgabeEventMitAbholort --|>  de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.erzeugung.BestellungsaufgabeEvent
de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.erzeugung.BestellungsaufgabeEventMitAdresse --|>  de.weinbrecht.luc.architecture.ddd.demo.domain.events.domain.model.events.erzeugung.BestellungsaufgabeEvent


@enduml